--- a/.github/workflows/update-vault-submodule.yml
+++ b/.github/workflows/update-vault-submodule.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build Site from Vault/
         run: |
           ./kiln generate \
-            --input "./LOOKIE" \
+            --input "./Vault" \
             --output "./public" \
             --url "https://embersofintention.github.io/LOOKIESITE" \
             --name "Lookie LvK Stuff"
