--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,8 @@ jobs:
           --input "./Vault" \
           --output "./public" \
           --url "https://embersofintention.github.io/LOOKIESITE" \
-          --name "Lookie LvK Stuff"
+          --name "Lookie LvK Stuff" \
+          --theme "Vault/kiln"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
